<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffff4321"
    android:onClick="onClick">


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/dodajProdukt"
        android:id="@+id/dodajProd"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/ripple_material_dark"
        android:onClick="onClick"
        android:layout_marginTop="10sp"
        android:layout_marginBottom="5sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/powrot"
        android:id="@+id/powrot"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/ripple_material_dark"
        android:onClick="onClick"
        android:nestedScrollingEnabled="false"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView_prod"
        android:layout_centerHorizontal="true"
        android:choiceMode="multipleChoice"
        android:layout_below="@+id/textView3"
        android:layout_above="@+id/textView5"
        android:layout_marginLeft="10sp"
        android:layout_marginRight="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/products"
        android:id="@+id/textView3"
        android:layout_below="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cena"
        android:id="@+id/textView4"
        android:layout_below="@+id/editText"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/zero"
        android:id="@+id/textView5"
        android:layout_above="@+id/powrot"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="10sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/suma"
        android:id="@+id/textView6"
        android:layout_alignBottom="@+id/textView5"
        android:layout_toStartOf="@+id/textView5"
        android:layout_marginRight="10sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/dodajProd"
        android:layout_centerHorizontal="true" />


</RelativeLayout>