<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="konross.listazakupow.MainActivity"
    android:background="#ffff4321">


    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/dodajProd"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:background="@color/ripple_material_dark"
        android:onClick="onClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:id="@+id/powrot"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/ripple_material_dark"
        android:onClick="onClick"
        android:nestedScrollingEnabled="false" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView_listy"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/powrot"
        android:choiceMode="multipleChoice"
        android:layout_below="@+id/textView2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/Twojelis"
        android:id="@+id/textView2"
        android:layout_below="@+id/dodajProd"
        android:layout_alignParentStart="true"
        android:layout_marginRight="5sp"/>
</RelativeLayout>
